// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorChecker should add hover pseudo class for given props 1`] = `
<Styled(styled.span)
  color="black"
  hover={true}
  isKing={false}
  nextMove={true}
>
  <span
    className="sc-EHOje sc-bZQynM dDqasE"
    color="black"
  />
</Styled(styled.span)>
`;

exports[`ColorChecker should render black component for given props 1`] = `
<Styled(styled.span)
  color="black"
  hover={false}
  isKing={false}
  nextMove={false}
>
  <span
    className="sc-EHOje sc-bZQynM icgyJq"
    color="black"
  />
</Styled(styled.span)>
`;

exports[`ColorChecker should render component with king markup 1`] = `
<Styled(styled.span)
  color="black"
  hover={true}
  isKing={true}
  nextMove={true}
>
  <span
    className="sc-EHOje sc-bZQynM dxEluG"
    color="black"
  />
</Styled(styled.span)>
`;

exports[`ColorChecker should render white component for given props 1`] = `
<Styled(styled.span)
  color="white"
  hover={false}
  isKing={false}
  nextMove={false}
>
  <span
    className="sc-EHOje sc-bZQynM bqujZz"
    color="white"
  />
</Styled(styled.span)>
`;

exports[`SelectedChecker should render black selectedChecker with king markup for given props 1`] = `
<Styled(styled.span)
  color="black"
  isKing={true}
>
  <span
    className="sc-EHOje sc-gzVnrw hZxNqY"
    color="black"
  />
</Styled(styled.span)>
`;

exports[`SelectedChecker should render black selectedChecker without king markup for given props 1`] = `
<Styled(styled.span)
  color="black"
  isKing={false}
>
  <span
    className="sc-EHOje sc-gzVnrw FjWnG"
    color="black"
  />
</Styled(styled.span)>
`;

exports[`SelectedChecker should render white selectedChecker with king markup for given props 1`] = `
<Styled(styled.span)
  color="white"
  isKing={true}
>
  <span
    className="sc-EHOje sc-gzVnrw eaNrOX"
    color="white"
  />
</Styled(styled.span)>
`;

exports[`SelectedChecker should render white selectedChecker without king markup for given props 1`] = `
<Styled(styled.span)
  color="white"
  isKing={false}
>
  <span
    className="sc-EHOje sc-gzVnrw ijfari"
    color="white"
  />
</Styled(styled.span)>
`;
